<resources>
    <string name="app_name">Choose Your Connect 4 Color!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="recall_color">Saved Colors</string>
    <string name="save_color">Save</string>
    <string name="red_word">Red</string>
    <string name="green_word">Green</string>
    <string name="blue_word">Blue</string>
</resources>
